--- a/bs/css/main.css
+++ b/bs/css/main.css
@@ -11,13 +11,13 @@ body,ul,li{
 			height: 70px;
 		}
 		.logo{
-			width: 200px;
-			height: 70px;
+			width: 100px;
+			height: 60px;
 			float: left;
 			line-height: 70px;
 		}
 		.Navbar-ul1{
-			width: 500px;
+			width: 600px;
 			height: 70px;
 			float: left;
 			list-style-type: none;
@@ -39,6 +39,8 @@ body,ul,li{
 			float: left;
 			line-height: 70px;
 			font-size: 16px;
+			padding:0;
+			text-align:center
 		}
 		.Navbar-ul2{
 			width: 300px;
@@ -89,26 +91,26 @@ body,ul,li{
 		}
 		.title1{
 			width: 100%;
-			margin-top: 10px; 
-			margin-bottom: 10px; 
+			margin-top: 10px;
+			margin-bottom: 10px;
 			color: #777777;
 		}
 		.title2{
 			width: 100%;
-			margin-top: 10px; 
-			margin-bottom: 10px; 
+			margin-top: 10px;
+			margin-bottom: 10px;
 			color: #777777;
 		}
 		.title3{
 			width: 100%;
-			margin-top: 10px; 
-			margin-bottom: 10px; 
+			margin-top: 10px;
+			margin-bottom: 10px;
 			color: #777777;
 		}
 		.title4{
 			width: 100%;
-			margin-top: 10px; 
-			margin-bottom: 10px; 
+			margin-top: 10px;
+			margin-bottom: 10px;
 			color: #777777;
 		}
 		.thumbnail{
@@ -132,7 +134,7 @@ body,ul,li{
 		}
 		.title-content span{
 			margin-top: 10px;
-			margin-right: 10px; 
+			margin-right: 10px;
 			color: #aaa;
 			line-height: 14px;
 		}
@@ -150,16 +152,16 @@ body,ul,li{
 			text-align: center;
 			padding-left: 7px;
 			padding-right: 7px;
-			margin-right: 5px; 
+			margin-right: 5px;
 
 		}
 		.active{
-			border-radius: 10px; 
+			border-radius: 10px;
 			background: #4ABBFA;
 			color: #fff;
 		}
 		.title3 .title-nav .col-md-2{
-			color: #337ab7;	
+			color: #337ab7;
 		}
 		.title3-span{
 			width: 4px;
@@ -194,7 +196,7 @@ body,ul,li{
 			text-decoration: none;
 		}
 		.teacher-header{
-			padding-top: 10px; 
+			padding-top: 10px;
 			background:#f5f8fa;
 			margin: 0;
 		}
