--- a/bs/css/main.css
+++ b/bs/css/main.css
@@ -1,248 +1,114 @@
-body,ul,li{
-			margin: 0;
-			padding: 0;
-		}
-		*{
-			font-family: 微软雅黑;
-		}
-		.Navbar{
-			border: 0;
-			width: 100%;
-			height: 70px;
-		}
-		.logo{
-			width: 100px;
-			height: 60px;
-			float: left;
-			line-height: 70px;
-		}
-		.Navbar-ul1{
-			width: 600px;
-			height: 70px;
-			float: left;
-			list-style-type: none;
+.title1 {
+  width: 100%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  color: #777777;
+}
 
-		}
-		.Navbar-ul1 .col-md-2>a{
-			color: #333;
-		}
-		.Navbar-ul1 .col-md-2>a:hover{
-			color: #57bffa;
-			text-decoration: none;
-		}
-		.Navbar-ul1 .col-md-2>a:link{
-			color: #57bffa;
-			text-decoration: none;
-		}
-		.Navbar-ul1>li{
-			height: 70px;
-			float: left;
-			line-height: 70px;
-			font-size: 16px;
-			padding:0;
-			text-align:center
-		}
-		.Navbar-ul2{
-			width: 300px;
-			height: 70px;
-			float: right;
-			list-style-type: none;
-			position: relative;
-		}
-		.Navbar-ul2 .col-md-6 input{
-			position: absolute;
-			width: 100px;
-			top: 20px;
-			right: 35px;
-			border-radius: 30px;
-		}
-		.form-control-feedback{
-			width: 100px;
-			margin:20px 0;
-		}
-		.Navbar-ul2 li{
-			line-height: 70px;
-			font-size: 16px;
-		}
-		.Navbar-ul2 .col-md-2{
-			padding: 0px;
-		}
-		.login,.register{
-			cursor: pointer;
-		}
-		.login:hover,.register:hover{
-			color:#57bffa;
-		}
-		.modal{
-			margin-top: 50px;
-		}
-		.modal-body .form-group{
-			margin:15px 10px;
-		}
-		.modal-footer{
-			padding: 7px;
-		}
-		.modal-footer a{
-			padding: 4px;
-			margin: 0px;
-		}
-		.modal-footer a:hover{
-			color: #337ab7;
-		}
-		.title1{
-			width: 100%;
-			margin-top: 10px;
-			margin-bottom: 10px;
-			color: #777777;
-		}
-		.title2{
-			width: 100%;
-			margin-top: 10px;
-			margin-bottom: 10px;
-			color: #777777;
-		}
-		.title3{
-			width: 100%;
-			margin-top: 10px;
-			margin-bottom: 10px;
-			color: #777777;
-		}
-		.title4{
-			width: 100%;
-			margin-top: 10px;
-			margin-bottom: 10px;
-			color: #777777;
-		}
-		.thumbnail{
-			bottom: 0px;
-			box-shadow: 0px 7px 8px 3px rgba(200,200,200,0);
-			transition: box-shadow 500ms,bottom 500ms;
-			-moz-transition:box-shadow 500ms,bottom 500ms; /* Firefox 4 */
-			-webkit-transition:box-shadow  500ms,bottom 500ms; /* Safari and Chrome */
-			-o-transition:box-shadow 500ms,bottom 500ms; /* Opera */
-		}
-		.thumbnail:hover{
-			box-shadow: 0px 7px 8px 3px rgba(200,200,200,0.7);
-			bottom: 10px;
-		}
-		.title1 .title-header{
-			margin-bottom: 20px;
-		}
-		.title-line{
-			height: 35px;
-			border-bottom: solid 1px #ddd;
-		}
-		.title-content span{
-			margin-top: 10px;
-			margin-right: 10px;
-			color: #aaa;
-			line-height: 14px;
-		}
-		.content-price{
-			float: right;
-			color: #ee7063!important;
-		}
-		.title-nav{
-			position: relative;
-			margin-top: 5px;
-			margin-bottom: 15px;
-			line-height: 40px;
-		}
-		.title-nav .col-md-1{
-			text-align: center;
-			padding-left: 7px;
-			padding-right: 7px;
-			margin-right: 5px;
+.title2 {
+  width: 100%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  color: #777777;
+}
 
-		}
-		.active{
-			border-radius: 10px;
-			background: #4ABBFA;
-			color: #fff;
-		}
-		.title3 .title-nav .col-md-2{
-			color: #337ab7;
-		}
-		.title3-span{
-			width: 4px;
-			height: 20px;
-			background: #48bafa;
-			position: absolute;
-			top: 10px;
-		}
-		.title3 ul{
-			margin-left:55px;
-		}
-		.title3 ul li{
-			padding: 10px;
-		}
-		.title3 ul .col-md-5,.title3 ul .col-md-1{
-			height: 30px;
-			line-height: 30px;
-		}
-		.title3 ul li span {
-			display: block;
-			margin-right: 50px;
-			float: right;
-		}
-		.title3 ul li {
-			list-style-type: circle;
-		}
-		.title3 ul a{
-			color: #444;
-		}
-		.title3 ul a:hover{
-			color: #48bafa;
-			text-decoration: none;
-		}
-		.teacher-header{
-			padding-top: 10px;
-			background:#f5f8fa;
-			margin: 0;
-		}
-		.teacher-img{
-			border: solid 3px #ccc;
-			overflow: hidden;
-			width: 100px;
-			border-radius: 100px;
-			height: 100px;
-		    margin: 10px auto;
-		}
-		.teacher-content{
-			height: 60px;
-			width: 100px;
-			margin: 0 auto;
-		}
-		.teacher-content p{
-			color: #cacbcc;
-		}
-		.title4 .caption{
-			height: 74px;
-			line-height: 50px;
-			color: #444;
-			text-align: center;
-		}
-		.title4 .caption button{
-			margin:0 10px;
-		}
-		.footer{
-			width: 100%;
-			background: #ccc;
-		}
-		.footer-top{
-			width: 100%;
-		}
-		.footer-bottom{
-			width: 100%;
-			height: 90px;
-			background: #212121;
-			padding: 10px;
-		}
-		.footer-bottom p{
-			margin-bottom: 0;
-			text-align: center;
-			color:#D7D7D7;
-		}
-		.footer-bottom p:last-child{
-			color: #666;
-		}
+.title3 {
+  width: 100%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  color: #777777;
+}
+
+.title4 {
+  width: 100%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  color: #777777;
+}
+.title1 .title-header {
+  margin-bottom: 20px;
+}
+
+.title3 .title-nav .col-md-2 {
+  color: #337ab7;
+}
+
+.title3-span {
+  width: 4px;
+  height: 20px;
+  background: #48bafa;
+  position: absolute;
+  top: 10px;
+}
+
+.title3 ul {
+  margin-left: 55px;
+}
+
+.title3 ul li {
+  padding: 10px;
+}
+
+.title3 ul .col-md-5,
+.title3 ul .col-md-1 {
+  height: 30px;
+  line-height: 30px;
+}
+
+.title3 ul li span {
+  display: block;
+  margin-right: 50px;
+  float: right;
+}
+
+.title3 ul li {
+  list-style-type: circle;
+}
+
+.title3 ul a {
+  color: #444;
+}
+
+.title3 ul a:hover {
+  color: #48bafa;
+  text-decoration: none;
+}
+
+.teacher-header {
+  padding-top: 10px;
+  background: #f5f8fa;
+  margin: 0;
+}
+
+.teacher-img {
+  border: solid 3px #ccc;
+  overflow: hidden;
+  width: 100px;
+  border-radius: 100px;
+  height: 100px;
+  margin: 10px auto;
+}
+
+.teacher-content {
+  height: 60px;
+  width: 100px;
+  margin: 0 auto;
+}
+
+.teacher-content p {
+  color: #cacbcc;
+}
+
+.title4 .title-header{
+	margin-bottom: 20px;
+}
+.title4 .caption {
+  height: 74px;
+  line-height: 50px;
+  color: #444;
+  text-align: center;
+}
+
+.title4 .caption button {
+  margin: 0 10px;
+}
