--- a/bs/css/public.css
+++ b/bs/css/public.css
@@ -17,21 +17,21 @@ body{
 .Navbar {
   border: 0;
   width: 100%;
-  height: 70px;
+  height: 60px;
   background: url('../../images/bg-0051.gif');
 }
 
 .logo {
   width: 100px;
-  height: 70px;
+  height: 60px;
   float: left;
-  line-height: 70px;
+  line-height: 60px;
   font-size: 0;
 }
 
 .Navbar-ul1 {
   width: 600px;
-  height: 70px;
+  height: 60px;
   float: left;
   list-style-type: none;
 
@@ -42,17 +42,18 @@ body{
 }
 
 .Navbar-ul1>li {
-  height: 70px;
+  height: 60px;
   float: left;
-  line-height: 70px;
+  line-height: 60px;
   font-size: 16px;
   padding: 0;
-  text-align: center
+  text-align: center;
+  margin-left:20px;
 }
 
 .Navbar-ul2 {
   width: 300px;
-  height: 70px;
+  height: 60px;
   float: right;
   list-style-type: none;
   position: relative;
@@ -72,7 +73,7 @@ body{
 }
 
 .Navbar-ul2 li {
-  line-height: 70px;
+  line-height: 60px;
   font-size: 16px;
 }
 
