--- a/bs/css/public.css
+++ b/bs/css/public.css
@@ -1,17 +1,13 @@
-body,
-ul,
-li {
-  margin: 0;
-  padding: 0;
-}
-
-* {
-  font-family: 微软雅黑;
+html,body,form,input,span,p,img,ul,ol,li,dl,dt,dd {
+  margin:0;
+  padding:0;
+  border:0;
 }
 a {
   color: #8f0002;
 }
 body{
+  font-family: 微软雅黑;
   background: url('../../images/bg.jpg');
 }
 .Navbar {
@@ -48,7 +44,8 @@ body{
   font-size: 16px;
   padding: 0;
   text-align: center;
-  margin-left:20px;
+  box-sizing: border-box;
+  padding: 0 10px;
 }
 
 .Navbar-ul2 {
@@ -156,10 +153,6 @@ h3.page-header{
   background: #ccc;
 }
 
-.footer-top {
-  width: 100%;
-}
-
 .footer-bottom {
   width: 100%;
   height: 90px;
@@ -176,3 +169,71 @@ h3.page-header{
 .footer-bottom p:last-child {
   color: #666;
 }
+#moquu_top,#moquu_wxin,#moquu_wshare {
+  z-index:2;
+  width:40px;
+  height:40px;
+  right:10px;
+  position:fixed;
+  cursor:pointer;
+  _position:absolute;
+  _bottom:auto;
+  _top:expression(eval(document.documentElement.scrollTop+document.documentElement.clientHeight-this.offsetHeight-(parseInt(this.currentStyle.marginTop,10)||0)-(parseInt(this.currentStyle.marginBottom,10)||0)))
+}
+
+#moquu_wxin { bottom:140px; right:10px;
+}
+#moquu_wxin a {
+  background:url(../../images/sbtn.png) 0 0px;
+  right:0;
+  float:left;
+  width:40px;
+  height:40px;
+  text-indent:-9999px
+}
+#moquu_wxin a:hover {
+  background:url(../../images/sbtn.png) -40px -0px
+}
+#moquu_wshare {bottom:100px; right:10px;
+}
+#moquu_wshare a {
+  background:url(../../images/sbtn.png) 0 -40px;
+  width:40px;
+  height:40px;
+  right:0;
+  float:left;
+  text-indent:-9999px
+}
+#moquu_wshare a:hover {
+  background:url(../../images/sbtn.png) -40px -40px
+}
+
+.moquu_wxin,.moquu_wshare {
+  position:relative;
+  z-index:2
+}
+.moquu_wxin a:hover .moquu_wxinh,.moquu_wshare a:hover .moquu_wshareh {
+  display:block
+}
+.moquu_wxin .moquu_wxinh {
+  position:absolute;
+  display:none;
+  right:40px;
+  bottom:0px;
+  width:93px;
+  height:40px;
+  background:url(../../images/fankui.png) 0 0 no-repeat #ff6060;
+  color:#FFF; border-radius:4px 0 0 4px;
+}
+.moquu_wshare .moquu_wshareh {
+  position:absolute;
+  display:none;
+  right:44px;
+  bottom:-85px;
+  width:200px;
+  height:260px;
+  background:url(../../images/weixin.jpg) no-repeat;
+  background-size: 100% 100%;
+}
+
+#topcontrol{background:#4c4c4c; height:40px; width:40px; border-radius:4px;}
