--- a/bs/css/main.css
+++ b/bs/css/main.css
@@ -25,6 +25,7 @@
   margin-bottom: 10px;
   color: #777777;
 }
+
 .title1 .title-header {
   margin-bottom: 20px;
 }
@@ -70,7 +71,7 @@
 }
 
 .title3 ul a:hover {
-  color: #48bafa;
+  color: #999;
   text-decoration: none;
 }
 
@@ -89,6 +90,11 @@
   margin: 10px auto;
 }
 
+.teacher-img img {
+  height: 100%;
+  width: 100%;
+}
+
 .teacher-content {
   height: 60px;
   width: 100px;
@@ -99,9 +105,10 @@
   color: #cacbcc;
 }
 
-.title4 .title-header{
-	margin-bottom: 20px;
+.title4 .title-header {
+  margin-bottom: 20px;
 }
+
 .title4 .caption {
   height: 74px;
   line-height: 50px;
