--- a/bs/css/main.css
+++ b/bs/css/main.css
@@ -1,3 +1,23 @@
+.title0{
+  height: 460px;
+  color: #777777;
+  margin-top: 20px;
+}
+.video{
+  width: 600px;
+  height: 350px;
+  float: left;
+  margin-right: 20px;
+}
+.photo{
+  width: 500px;
+  height: 350px;
+  float: left;
+}
+.photo img{
+  width: 100%;
+  height: 100%;
+}
 .title1 {
   width: 100%;
   margin-top: 10px;
