--- a/bs/css/public.css
+++ b/bs/css/public.css
@@ -18,6 +18,7 @@ dd {
 
 a {
   color: #8f0002;
+  text-decoration: none !important;
 }
 
 a:hover {
@@ -28,7 +29,24 @@ body {
   font-family: 微软雅黑;
   background: url('../../images/bg.jpg');
 }
-
+.top{
+  height: 100px;
+  background: #9c061b;
+  font-family: '楷体', serif;
+  color: #f2eb30;
+}
+.top .name{
+  line-height: 100px;
+  font-size: 34px;
+  font-weight: bold;
+  float: left;
+}
+.top .tuijian{
+  line-height: 28px;
+  float: right;
+  padding-top: 20px;
+  font-size: 20px;
+}
 .Navbar {
   border: 0;
   width: 100%;
@@ -115,17 +133,18 @@ body {
 .content-price span{
   margin-right: 5px;
   font-size: 14px;
-  color: #8f0002;
+  color: red;
 }
 .saoma{
   color: #666 !important;
 }
 .saoma span{
   color: #666 !important;
+  font-size: 14px !important;
 }
 .content-price span span{
   color: red;
-  font-size:16px;
+  font-size:18px;
 }
 .title-nav {
   position: relative;
@@ -280,7 +299,7 @@ h3.page-header {
   bottom: -85px;
   width: 200px;
   height: 260px;
-  background: url(../../images/company/gongsi.jpg) no-repeat;
+  background: url(../../images/company/weixin.jpg) no-repeat;
   background-size: 100% 100%;
 }
 
